Changed the HTML for the site.

--- a/.local/share/mc/history
+++ b/.local/share/mc/history
@@ -3,11 +3,12 @@
 
 [input2]
 0=/home/matedim/
+1=/home/matedim/mysite/
 
 [cmdline]
 0=%%&&''(()******++++++++++,,,,,,,,,,,,,,,,,,,,,,++++++++++++++************************)))))))))))((((((((((&&&&&&&&&&&&&&&&&&'''&&&&&&&&&&&&&&&&''''''''''''''((('''''''''''''&&&&''''()*)))((((('''''''''''''''&&&&&&&&&&&&&&&&&&'''''''(((()+,.02468:;<=====>>>>????@@???======<<<<<======>>??@@@@@@@@@@AAAAAAAAAAA@@????>>>>>>>>==========>>>>>>>>@AAABBBBBBBBBBBBBBBBBBBBBBAAA???>>>========<<<;;;;:::::::::::::::::::::::::::99999999:;;;;;;;;:::::999999::::::;;;;;;;;;;<<<<===========================<<<<<;;;::9988766554444333333330.,)'&*-/024678;63100000000////////001234788888888888888889=>@BDEEFFFEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEF
-1=
-2=%%&&''(()******++++++++++,,,,,,,,,,,,,,,,,,,,,,++++++++++++++************************)))))))))))((((((((((&&&&&&&&&&&&&&&&&&'''&&&&&&&&&&&&&&&&''''''''''''''((('''''''''''''&&&&''''()*)))((((('''''''''''''''&&&&&&&&&&&&&&&&&&'''''''(((()+,.02468:;<=====>>>>????@@???======<<<<<======>>??@@@@@@@@@@AAAAAAAAAAA@@????>>>>>>>>==========>>>>>>>>@AAABBBBBBBBBBBBBBBBBBBBBBAAA???>>>========<<<;;;;:::::::::::::::::::::::::::99999999:;;;;;;;;:::::999999::::::;;;;;;;;;;<<<<===========================<<<<<;;;::9988766554444333333330.,)'&*-/024678;63100000000////////001234788888888888888889=>@BDEEFFFEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEF8888888888888888889999999[M@9999::::[20~
+1=%%&&''(()******++++++++++,,,,,,,,,,,,,,,,,,,,,,++++++++++++++************************)))))))))))((((((((((&&&&&&&&&&&&&&&&&&'''&&&&&&&&&&&&&&&&''''''''''''''((('''''''''''''&&&&''''()*)))((((('''''''''''''''&&&&&&&&&&&&&&&&&&'''''''(((()+,.02468:;<=====>>>>????@@???======<<<<<======>>??@@@@@@@@@@AAAAAAAAAAA@@????>>>>>>>>==========>>>>>>>>@AAABBBBBBBBBBBBBBBBBBBBBBAAA???>>>========<<<;;;;:::::::::::::::::::::::::::99999999:;;;;;;;;:::::999999::::::;;;;;;;;;;<<<<===========================<<<<<;;;::9988766554444333333330.,)'&*-/024678;63100000000////////001234788888888888888889=>@BDEEFFFEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEF8888888888888888889999999[M@9999::::[20~
+2=
 
 [Dir Hist New Right Panel]
 0=/home/matedim/mysite/mysite/blog
